gcc/testsuite/rust/rustc/ui/issues/issue-37550.rs
const fn x() {
    let t = true;
    let x = || t; // { dg-error ".E0658." "" { target *-*-* } }
}

fn main() {}

